Started adding content to notebooks

--- a/Notebooks/00-01-Check-Internet-Connection.ipynb
+++ b/Notebooks/00-01-Check-Internet-Connection.ipynb
@@ -4,13 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Querying the Open Smart Home Dataset\n",
-    "Preparation: Load requests package"
+    "# Check internet connectivity\n",
+    "Within this short code snippet we will check your local´s machine or cloud machines internet connectivity.  \n",
+    "We do this by sending a HTTP request to a remote server."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,26 +109,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"head\":{\"vars\":[\"SensorIdent\"]},\"results\":{\"bindings\":[{\"SensorIdent\":{\"type\":\"literal\",\"value\":\"Room1Temp\"}}]}} \n",
-      "\n",
       "Request Code: 200\n",
-      "\n"
+      "Request code was 200, all fine!\n",
+      "Internet connection for HTTP works!\n"
      ]
     }
    ],
    "source": [
-    "response = req.content.decode(\"utf-8\")\n",
-    "print (response, \"\\n\")\n",
-    "\n",
     "# Response status code\n",
-    "print (\"Request Code: {}\\n\".format(req.status_code))"
+    "print( \"Request Code: {}\".format( req.status_code ) )\n",
+    "\n",
+    "if req.status_code == 200:\n",
+    "    print( \"Request code was 200, all fine!\" )\n",
+    "    response = req.json()\n",
+    "    if response[ \"results\" ][ \"bindings\" ][ 0 ][ \"SensorIdent\" ][ \"value\" ] == \"Room1Temp\":\n",
+    "        print( \"Internet connection for HTTP works!\" )\n",
+    "\n"
    ]
   },
   {
