Moved content in Contents.md to new ipython 00-00-Check-Python-Setup-checkpoint.ipynb

--- a/Notebooks/00-00-Check-Python-Setup.ipynb
+++ b/Notebooks/00-00-Check-Python-Setup.ipynb
@@ -61,7 +61,96 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Verify the current path your are working in"
+    "Check if your current python environment has the required packages for this tutorial installed:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'rdflib'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-b22af100501a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mrequests\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mrdflib\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'rdflib'"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import rdflib"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If there is a **ModuleNotFoundError** install the missing module, e.g. for conda (from Jake VanderPlas):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Solving environment: ...working... failed\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "PackagesNotFoundError: The following packages are not available from current channels:\n",
+      "\n",
+      "  - rdflib\n",
+      "\n",
+      "Current channels:\n",
+      "\n",
+      "  - https://repo.anaconda.com/pkgs/main/win-64\n",
+      "  - https://repo.anaconda.com/pkgs/main/noarch\n",
+      "  - https://repo.anaconda.com/pkgs/free/win-64\n",
+      "  - https://repo.anaconda.com/pkgs/free/noarch\n",
+      "  - https://repo.anaconda.com/pkgs/r/win-64\n",
+      "  - https://repo.anaconda.com/pkgs/r/noarch\n",
+      "  - https://repo.anaconda.com/pkgs/pro/win-64\n",
+      "  - https://repo.anaconda.com/pkgs/pro/noarch\n",
+      "  - https://repo.anaconda.com/pkgs/msys2/win-64\n",
+      "  - https://repo.anaconda.com/pkgs/msys2/noarch\n",
+      "\n",
+      "To search for alternate channels that may provide the conda package you're\n",
+      "looking for, navigate to\n",
+      "\n",
+      "    https://anaconda.org\n",
+      "\n",
+      "and use the search bar at the top of the page.\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Install a conda package in the current Jupyter kernel\n",
+    "#!conda install --yes --prefix {sys.prefix} <PACKAGENAME>\n",
+    "\n",
+    "import sys\n",
+    "!conda install --yes --prefix {sys.prefix} rdflib"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check the current path your are working in"
    ]
   },
   {
