Restructured a bit the navigation and defined objectives in Overview.ipynb
Added 02-01-Publish-Smart-Home-Sensor-Data-using-SWT.ipynb to implement the coding challenge on publishing smart home data on the web.

--- a/Notebooks/00-00-Check-Python-Setup.ipynb
+++ b/Notebooks/00-00-Check-Python-Setup.ipynb
@@ -30,7 +30,7 @@
     {
      "data": {
       "text/plain": [
-       "'3.7.0 (default, Jun 28 2018, 08:04:48) [MSC v.1912 64 bit (AMD64)]'"
+       "'3.7.3 | packaged by conda-forge | (default, Mar 27 2019, 23:01:00) \\n[GCC 7.3.0]'"
       ]
      },
      "execution_count": 1,
@@ -66,21 +66,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'rdflib'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-b22af100501a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mrequests\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mrdflib\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'rdflib'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests\n",
     "import rdflib"
@@ -95,46 +83,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Solving environment: ...working... failed\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "Collecting package metadata: done\n",
+      "Solving environment: done\n",
       "\n",
-      "PackagesNotFoundError: The following packages are not available from current channels:\n",
+      "## Package Plan ##\n",
       "\n",
-      "  - rdflib\n",
+      "  environment location: /srv/conda/envs/notebook\n",
       "\n",
-      "Current channels:\n",
+      "  added / updated specs:\n",
+      "    - rdflib\n",
       "\n",
-      "  - https://repo.anaconda.com/pkgs/main/win-64\n",
-      "  - https://repo.anaconda.com/pkgs/main/noarch\n",
-      "  - https://repo.anaconda.com/pkgs/free/win-64\n",
-      "  - https://repo.anaconda.com/pkgs/free/noarch\n",
-      "  - https://repo.anaconda.com/pkgs/r/win-64\n",
-      "  - https://repo.anaconda.com/pkgs/r/noarch\n",
-      "  - https://repo.anaconda.com/pkgs/pro/win-64\n",
-      "  - https://repo.anaconda.com/pkgs/pro/noarch\n",
-      "  - https://repo.anaconda.com/pkgs/msys2/win-64\n",
-      "  - https://repo.anaconda.com/pkgs/msys2/noarch\n",
       "\n",
-      "To search for alternate channels that may provide the conda package you're\n",
-      "looking for, navigate to\n",
+      "The following packages will be downloaded:\n",
       "\n",
-      "    https://anaconda.org\n",
+      "    package                    |            build\n",
+      "    ---------------------------|-----------------\n",
+      "    html5lib-1.0.1             |             py_0          89 KB  conda-forge\n",
+      "    isodate-0.6.0              |             py_1          25 KB  conda-forge\n",
+      "    keepalive-0.5              |             py_1          10 KB  conda-forge\n",
+      "    pyparsing-2.4.0            |             py_0          55 KB  conda-forge\n",
+      "    rdflib-4.2.2               |        py37_1000         556 KB  conda-forge\n",
+      "    sparqlwrapper-1.8.2        |        py37_1000          37 KB  conda-forge\n",
+      "    ------------------------------------------------------------\n",
+      "                                           Total:         773 KB\n",
       "\n",
-      "and use the search bar at the top of the page.\n",
+      "The following NEW packages will be INSTALLED:\n",
       "\n",
-      "\n"
+      "  html5lib           conda-forge/noarch::html5lib-1.0.1-py_0\n",
+      "  isodate            conda-forge/noarch::isodate-0.6.0-py_1\n",
+      "  keepalive          conda-forge/noarch::keepalive-0.5-py_1\n",
+      "  pyparsing          conda-forge/noarch::pyparsing-2.4.0-py_0\n",
+      "  rdflib             conda-forge/linux-64::rdflib-4.2.2-py37_1000\n",
+      "  sparqlwrapper      conda-forge/linux-64::sparqlwrapper-1.8.2-py37_1000\n",
+      "\n",
+      "\n",
+      "\n",
+      "Downloading and Extracting Packages\n",
+      "isodate-0.6.0        | 25 KB     | ##################################### | 100% \n",
+      "sparqlwrapper-1.8.2  | 37 KB     | ##################################### | 100% \n",
+      "pyparsing-2.4.0      | 55 KB     | ##################################### | 100% \n",
+      "rdflib-4.2.2         | 556 KB    | ##################################### | 100% \n",
+      "keepalive-0.5        | 10 KB     | ##################################### | 100% \n",
+      "html5lib-1.0.1       | 89 KB     | ##################################### | 100% \n",
+      "Preparing transaction: done\n",
+      "Verifying transaction: done\n",
+      "Executing transaction: done\n"
      ]
     }
    ],
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -168,10 +168,10 @@
     {
      "data": {
       "text/plain": [
-       "'C:\\\\Users\\\\geos\\\\Documents\\\\00_Checkout\\\\SummerSchoolOfLDAC\\\\Notebooks'"
+       "'/home/jovyan/Notebooks'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +206,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
