--- a/Notebooks/01-00-Program-your-TBox.ipynb
+++ b/Notebooks/01-00-Program-your-TBox.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,12 +48,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First let´s give our a child (the ontology) a name, e.g. \"https://example.org/myFamousOntology\". Effectively this means adding the following triple to you triple store."
+    "First let´s give our a child (the ontology) a name, e.g. \"https://example.org/myFamousOntology\". Effectively this means adding the following triple to your triple store. Note, rdflib stores the triples in a triple store in your local memory."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
      "output_type": "stream",
      "text": [
       "Created myFamousOntology.ttl in folder:\n",
-      "C:\\Users\\geos\\Documents\\00_Checkout\\SummerSchoolOfLDAC\\Notebooks\n"
+      "/home/jovyan/Notebooks\n"
      ]
     }
    ],
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
      "output_type": "stream",
      "text": [
       "Created myFamousOntology.ttl in folder:\n",
-      "C:\\Users\\geos\\Documents\\00_Checkout\\SummerSchoolOfLDAC\\Notebooks\n"
+      "/home/jovyan/Notebooks\n"
      ]
     }
    ],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
      "output_type": "stream",
      "text": [
       "Created myFamousOntology.ttl in folder:\n",
-      "C:\\Users\\geos\\Documents\\00_Checkout\\SummerSchoolOfLDAC\\Notebooks\n"
+      "/home/jovyan/Notebooks\n"
      ]
     }
    ],
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
      "output_type": "stream",
      "text": [
       "Created myFamousOntology.ttl in folder:\n",
-      "C:\\Users\\geos\\Documents\\00_Checkout\\SummerSchoolOfLDAC\\Notebooks\n"
+      "/home/jovyan/Notebooks\n"
      ]
     }
    ],
@@ -317,9 +317,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SummerSchool",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "summerschool"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
