--- a/Notebooks/Index.ipynb
+++ b/Notebooks/Index.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The coding challenge of the Summmer School of LDAC\n",
+    "# Table of Contents\n",
+    "\n",
+    "## Introduction\n",
+    "\n",
+    "* [Overview](Overview.ipynb)  \n",
     "\n",
     "## Getting started\n",
     "\n",
@@ -21,10 +25,11 @@
     "* [01-03 Query a knowledge-base with SPARQL](01-03-Query-a-knowledge-base-with-SPARQL.ipynb)  \n",
     "* [01-04 Represent rules with SWRL](01-04-Represent-rules-with-SWRL.ipynb)  \n",
     "\n",
-    "## Chapter 2 - Open challenges for the **Coding Challenge**\n",
+    "## Chapter 2 - Topics for the **Coding Challenge**\n",
     "\n",
-    "* [02-00 Integrate heterogeneous building product data](02-00-Integrate-heterogeneous-building-product-data.ipynb)  \n",
-    "* [02-01 Knowledge-based Control of Buildings](02-01-Knowledge-based-Control-of-Buildings.ipynb)  \n"
+    "* [02-00 Publish Smart Home Sensor Data using SWT](02-01-Publish-Smart-Home-Sensor-Data-using-SWT.ipynb)  \n",
+    "* [02-01 Integrate heterogeneous building product data](02-00-Integrate-heterogeneous-building-product-data.ipynb)  \n",
+    "\n"
    ]
   },
   {
@@ -51,7 +56,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
