Revised 00-00-Check-Python-Setup.ipynb to also check for xlrd package
Small revision on added data in data/2012-03-23-Duplex-Handover.xlsx obtained from NIBS

Added feature for ABox programming example for knowledge extraction from excel sheets to populate BOT

--- a/Notebooks/00-00-Check-Python-Setup.ipynb
+++ b/Notebooks/00-00-Check-Python-Setup.ipynb
@@ -66,11 +66,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n",
+    "import xlrd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'rdflib'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-7898afa8b071>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mrdflib\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'rdflib'"
+     ]
+    }
+   ],
+   "source": [
     "import rdflib"
    ]
   },
@@ -83,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -127,11 +156,11 @@
       "\n",
       "Downloading and Extracting Packages\n",
       "isodate-0.6.0        | 25 KB     | ##################################### | 100% \n",
-      "sparqlwrapper-1.8.2  | 37 KB     | ##################################### | 100% \n",
-      "pyparsing-2.4.0      | 55 KB     | ##################################### | 100% \n",
       "rdflib-4.2.2         | 556 KB    | ##################################### | 100% \n",
       "keepalive-0.5        | 10 KB     | ##################################### | 100% \n",
       "html5lib-1.0.1       | 89 KB     | ##################################### | 100% \n",
+      "sparqlwrapper-1.8.2  | 37 KB     | ##################################### | 100% \n",
+      "pyparsing-2.4.0      | 55 KB     | ##################################### | 100% \n",
       "Preparing transaction: done\n",
       "Verifying transaction: done\n",
       "Executing transaction: done\n"
