Small adaptions and corrections in content from 11 May

--- a/Notebooks/00-00-Check-Python-Setup.ipynb
+++ b/Notebooks/00-00-Check-Python-Setup.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,21 +84,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'rdflib'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-7898afa8b071>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mrdflib\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'rdflib'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import rdflib"
    ]
@@ -112,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -127,40 +115,25 @@
       "  environment location: /srv/conda/envs/notebook\n",
       "\n",
       "  added / updated specs:\n",
-      "    - rdflib\n",
+      "    - xlrd\n",
       "\n",
       "\n",
       "The following packages will be downloaded:\n",
       "\n",
       "    package                    |            build\n",
       "    ---------------------------|-----------------\n",
-      "    html5lib-1.0.1             |             py_0          89 KB  conda-forge\n",
-      "    isodate-0.6.0              |             py_1          25 KB  conda-forge\n",
-      "    keepalive-0.5              |             py_1          10 KB  conda-forge\n",
-      "    pyparsing-2.4.0            |             py_0          55 KB  conda-forge\n",
-      "    rdflib-4.2.2               |        py37_1000         556 KB  conda-forge\n",
-      "    sparqlwrapper-1.8.2        |        py37_1000          37 KB  conda-forge\n",
+      "    xlrd-1.2.0                 |             py_0         108 KB  conda-forge\n",
       "    ------------------------------------------------------------\n",
-      "                                           Total:         773 KB\n",
+      "                                           Total:         108 KB\n",
       "\n",
       "The following NEW packages will be INSTALLED:\n",
       "\n",
-      "  html5lib           conda-forge/noarch::html5lib-1.0.1-py_0\n",
-      "  isodate            conda-forge/noarch::isodate-0.6.0-py_1\n",
-      "  keepalive          conda-forge/noarch::keepalive-0.5-py_1\n",
-      "  pyparsing          conda-forge/noarch::pyparsing-2.4.0-py_0\n",
-      "  rdflib             conda-forge/linux-64::rdflib-4.2.2-py37_1000\n",
-      "  sparqlwrapper      conda-forge/linux-64::sparqlwrapper-1.8.2-py37_1000\n",
+      "  xlrd               conda-forge/noarch::xlrd-1.2.0-py_0\n",
       "\n",
       "\n",
       "\n",
       "Downloading and Extracting Packages\n",
-      "isodate-0.6.0        | 25 KB     | ##################################### | 100% \n",
-      "rdflib-4.2.2         | 556 KB    | ##################################### | 100% \n",
-      "keepalive-0.5        | 10 KB     | ##################################### | 100% \n",
-      "html5lib-1.0.1       | 89 KB     | ##################################### | 100% \n",
-      "sparqlwrapper-1.8.2  | 37 KB     | ##################################### | 100% \n",
-      "pyparsing-2.4.0      | 55 KB     | ##################################### | 100% \n",
+      "xlrd-1.2.0           | 108 KB    | ##################################### | 100% \n",
       "Preparing transaction: done\n",
       "Verifying transaction: done\n",
       "Executing transaction: done\n"
@@ -172,7 +145,7 @@
     "#!conda install --yes --prefix {sys.prefix} <PACKAGENAME>\n",
     "\n",
     "import sys\n",
-    "!conda install --yes --prefix {sys.prefix} rdflib"
+    "!conda install --yes --prefix {sys.prefix} xlrd # or rdflib #requests"
    ]
   },
   {
@@ -184,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +173,7 @@
        "'/home/jovyan/Notebooks'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
