--- a/Notebooks/01-00-Program-your-TBox.ipynb
+++ b/Notebooks/01-00-Program-your-TBox.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Program your TBox\n",
-    "Within this short tutorial we will show you how to create from programming an ontology to formally represent terminological knowledge (TBox) [[Sab16]](https://doi.org/10.1007/978-3-319-41490-4_3).  "
+    "Within this short tutorial we will show you how to create from code an ontology to formally represent terminological knowledge (TBox) [[Sab16]](https://doi.org/10.1007/978-3-319-41490-4_3).  "
    ]
   },
   {
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We import rdflib and creat an initial graph"
+    "We import rdflib and create an initial graph"
    ]
   },
   {
@@ -40,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will implement the generation of the ontology depicted below.\n",
+    "We will implement the creation of the ontology depicted below.\n",
     "<img src=\"../figures/SimpleOntology.png\" width=\"600\" />"
    ]
   },
@@ -48,12 +48,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First let´s give our a child (the ontology) a name, e.g. \"https://example.org/myFamousOntology\". Effectively this means adding the following triple to your triple store. Note, rdflib stores the triples in a triple store in your local memory."
+    "First let´s give our a child (the ontology) a name, e.g. \"https://example.org/myFamousOntology\". Effectively this means adding the following triple to your triple store. Note, rdflib stores the triples in a triple store in your local memory and if a redundant triple is added the triple is only, obviously, stored once."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,14 +72,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(rdflib.term.URIRef('https://example.org/myFamousOntology'), rdflib.term.URIRef('http://www.w3.org/1999/02/22-rdf-syntax-ns#type'), rdflib.term.URIRef('http://www.w3.org/2002/07/owl#ontology'))\n"
+      "(rdflib.term.URIRef('https://example.org/myFamousOntology'), rdflib.term.URIRef('http://www.w3.org/1999/02/22-rdf-syntax-ns#type'), rdflib.term.URIRef('http://www.w3.org/2002/07/owl#ontology'))\n",
+      "(rdflib.term.URIRef('https://example.org/myFamousOntology#Aggregate'), rdflib.term.URIRef('http://www.w3.org/1999/02/22-rdf-syntax-ns#type'), rdflib.term.URIRef('http://www.w3.org/2002/07/owl#Class'))\n"
      ]
     }
    ],
@@ -92,99 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "All right and lets save it to a file in turtle format"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Created myFamousOntology.ttl in folder:\n",
-      "/home/jovyan/Notebooks\n"
-     ]
-    }
-   ],
-   "source": [
-    "g.serialize( destination = \"myFamousOntology.ttl\" , format = \"turtle\" )\n",
-    "print( \"Created myFamousOntology.ttl in folder:\" )\n",
-    "print( str( os.getcwd() ) )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Lets add a new namespace for our ontology so that we can use it. Also add the OWL namespace."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "g.bind( \"owl\" , OWL )\n",
-    "\n",
-    "NS = Namespace( \"https://example.org/myFamousOntology#\" )\n",
-    "g.bind( \"ont\" , NS )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Lets have a look at the outcome in the serialised file"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Created myFamousOntology.ttl in folder:\n",
-      "/home/jovyan/Notebooks\n"
-     ]
-    }
-   ],
-   "source": [
-    "g.serialize( destination = \"myFamousOntology.ttl\" , format = \"turtle\" )\n",
-    "print( \"Created myFamousOntology.ttl in folder:\" )\n",
-    "print( str( os.getcwd() ) )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Lets add the concept (owl:Class) *Aggregate* as depicted above:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s = NS[ \"Aggregate\" ]\n",
-    "p = RDF.type\n",
-    "o = OWL.Class\n",
-    "g.add( ( s , p , o ) )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Examine the result"
+    "All right and lets save it to a file in turtle format:"
    ]
   },
   {
@@ -211,12 +120,104 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And similarly add other concepts"
+    "Lets add a new namespace for our ontology so that we can use it. Also add the OWL namespace."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g.bind( \"owl\" , OWL )\n",
+    "\n",
+    "NS = Namespace( \"https://example.org/myFamousOntology#\" )\n",
+    "g.bind( \"ont\" , NS )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lets have a look at the outcome in the serialised file:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created myFamousOntology.ttl in folder:\n",
+      "/home/jovyan/Notebooks\n"
+     ]
+    }
+   ],
+   "source": [
+    "g.serialize( destination = \"myFamousOntology.ttl\" , format = \"turtle\" )\n",
+    "print( \"Created myFamousOntology.ttl in folder:\" )\n",
+    "print( str( os.getcwd() ) )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lets add the concept (owl:Class) *Aggregate* as depicted above:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = NS[ \"Aggregate\" ]\n",
+    "p = RDF.type\n",
+    "o = OWL.Class\n",
+    "g.add( ( s , p , o ) )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Examine the result:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created myFamousOntology.ttl in folder:\n",
+      "/home/jovyan/Notebooks\n"
+     ]
+    }
+   ],
+   "source": [
+    "g.serialize( destination = \"myFamousOntology.ttl\" , format = \"turtle\" )\n",
+    "print( \"Created myFamousOntology.ttl in folder:\" )\n",
+    "print( str( os.getcwd() ) )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And similarly add other concepts:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,12 +239,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we can add the inheritance relationship (rdfs:subClassOf)"
+    "Now we can add the inheritance relationship (rdfs:subClassOf):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,12 +268,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we can add the object properties (owl:ObjectProperty)"
+    "Now we can add the object properties (owl:ObjectProperty):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,12 +292,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And finally the produced file is"
+    "And finally the produced file is:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -313,6 +314,13 @@
     "print( \"Created myFamousOntology.ttl in folder:\" )\n",
     "print( str( os.getcwd() ) )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
