--- a/Notebooks/01-01-Program-your-ABox.ipynb
+++ b/Notebooks/01-01-Program-your-ABox.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,34 +345,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found space with name:  B105\n",
-      "Found space with name:  A204\n",
-      "Found space with name:  B204\n",
-      "Found space with name:  B103\n",
-      "Found space with name:  A104\n",
-      "Found space with name:  A101\n",
       "Found space with name:  B104\n",
-      "Found space with name:  A203\n",
-      "Found space with name:  A202\n",
       "Found space with name:  A205\n",
+      "Found space with name:  B103\n",
+      "Found space with name:  A202\n",
       "Found space with name:  R301\n",
-      "Found space with name:  B101\n",
-      "Found space with name:  A102\n",
-      "Found space with name:  B205\n",
-      "Found space with name:  A105\n",
+      "Found space with name:  A103\n",
+      "Found space with name:  B102\n",
+      "Found space with name:  A203\n",
       "Found space with name:  B201\n",
       "Found space with name:  B203\n",
+      "Found space with name:  B105\n",
+      "Found space with name:  A102\n",
+      "Found space with name:  A104\n",
+      "Found space with name:  B101\n",
+      "Found space with name:  A105\n",
       "Found space with name:  A201\n",
-      "Found space with name:  B102\n",
-      "Found space with name:  B202\n",
-      "Found space with name:  A103\n"
+      "Found space with name:  A204\n",
+      "Found space with name:  B204\n",
+      "Found space with name:  B205\n",
+      "Found space with name:  A101\n",
+      "Found space with name:  B202\n"
      ]
     }
    ],
@@ -391,13 +391,6 @@
     "for row in res:\n",
     "    print( \"Found space with name: \" , row[1] )"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
