--- a/Notebooks/02-01-Publish-Smart-Home-Sensor-Data-using-SWT.ipynb
+++ b/Notebooks/02-01-Publish-Smart-Home-Sensor-Data-using-SWT.ipynb
@@ -8,9 +8,9 @@
     "\n",
     "### Problem Description\n",
     "\n",
-    "Smart home systems are increasingly used in residential flats and buildings. Mostly these systems increase the comfort of a home either by improving indoor air quality, thermal comfort or integrate multimedia applications in the system. A tremendous amount of data is produced by these systems and its is difficult to integrate the data from different systems, as typically vendors and communication protocols differ.\n",
+    "Smart home systems are increasingly used in residential flats and buildings. Mostly these systems increase the comfort of a home either by improving indoor air quality, thermal comfort or integrate multimedia applications in the system. A tremendous amount of data is produced by these systems and it is difficult to integrate data from different systems, as typically vendors and communication protocols differ.\n",
     "\n",
-    "Linked Building Data may provide a remedy to the interoperability problems stemming from this multi-vendor, multi-protocol and multi-domain setting. In this coding challenge your will research what possibilities exist to integrate sensor data obtained from smart home systems with other data using Semantic Web Technologies.\n",
+    "Linked Building Data (LBD) may provide a remedy to the interoperability problems stemming from this multi-vendor, multi-protocol and multi-domain setting. In this coding challenge you will research what possibilities exist to integrate sensor data obtained from smart home systems with other data using Semantic Web Technologies.\n",
     "\n",
     "### Research Questions\n",
     "\n",
@@ -50,7 +50,7 @@
    "source": [
     "You may have a glimpse on the data within this notebook. All CSV files containing the time series of measuremens can be obtained [here](https://github.com/TechnicalBuildingSystems/OpenSmartHomeData/tree/master/Measurements).\n",
     "\n",
-    "For instance the sensor reading of the brightness sensor place to a wall in the bathroom is stored in file **Bathroom_Brightness.csv** starting with the following readings:\n",
+    "For instance the sensor reading of the brightness sensor placed to a wall in the bathroom is stored in file **Bathroom_Brightness.csv** starting with the following readings:\n",
     "\n",
     "```\n",
     "1489017527\t0\n",
@@ -65,14 +65,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2017-03-08 23:58:47\n"
+      "At  2017-03-08 23:58:47  a value of 0 lux is measured by the brightness sensor in the bathroom\n"
      ]
     }
    ],
@@ -81,8 +81,15 @@
     "\n",
     "convertedTime = time.strftime( \"%Y-%m-%d %H:%M:%S\", time.localtime( 1489017527 ) )\n",
     "\n",
-    "print( convertedTime )\n"
+    "print( \"At \" , convertedTime , \" a value of 0 lux is measured by the brightness sensor in the bathroom\" )\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
