--- a/Notebooks/Overview.ipynb
+++ b/Notebooks/Overview.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "## Navigation\n",
     "\n",
-    "To navigate between the different notebooks please always use the [Table of Contents](Index.ipynb) notebook.  \n",
+    "To navigate between the different notebooks please always use the [Index](Index.ipynb) notebook.  \n",
     "\n",
     "## Objectives\n",
     "\n",
@@ -19,13 +19,19 @@
     "* Show you the basics of programming LBD solutions  \n",
     "* Provide you rapidly with the ability to address real world research problems and start coding  \n",
     "\n",
-    "In the [Getting Started](Index.ipynb) chapter we first show you step by step how to setup your programming envirnoment.\n",
+    "In the [Getting Started](Index.ipynb) chapter we first show you step by step how to setup your programming environment.\n",
     "\n",
-    "Next, in the chapter on [Guided Programming](Index.ipynb), we prepared small examples where you can examine in documented code how to step by step perform the most relevant tasks in LBD including representing terminological domain knowledge (TBox), populated you created TBox with assertional knowledge (ABox), store this knowledge in a knowledge base and query it using SPARQL. Finally, we provide a short tutorial on how to use rule-languages such as SWRL to represent rule-like knowledge and add this to your knowledge base.\n",
+    "Next, in the chapter on [Guided Programming](Index.ipynb), we prepared small examples where you can examine in documented code how to step by step perform the most relevant tasks in LBD including the represention of terminological domain knowledge (TBox), populated your created TBox with assertional knowledge (ABox), store this knowledge in a knowledge base and query it using SPARQL. Finally, we provide a short tutorial on how to use rule-languages such as SWRL to represent rule-like knowledge and add this to your knowledge base.\n",
     "\n",
-    "Finally, after working yourself quickly through chapter 1 the team of lecturers from SSoLDAC have prepared in chapter 2 [Coding Challenge](Index.ipynb) real world research problems, which you have to solve as a coding challenge. Feel free to check in advance. Tackle them and bring them down!\n",
-    "\n"
+    "Finally, after working yourself quickly through chapter 1 the team of lecturers from SSoLDAC have prepared in chapter 2 [Coding Challenge](Index.ipynb) real world research problems, which you have to solve as a coding challenge. Feel free to check in advance. Tackle them and bring them down!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
